fix: Button padding on mobile

--- a/src/style.less
+++ b/src/style.less
@@ -2643,6 +2643,10 @@ img.connectors-link-menu-img {
     background-color: #5072EB;
     border: none;
     margin: auto 16px auto 16px;
+    padding-top: 2px;
+    padding-right: 6px;
+    padding-left: 6px;
+    padding-bottom: 3px;
   }
 
   .global-footer {
